--- a/playbooks/roles/artifactory/tasks/main.yml
+++ b/playbooks/roles/artifactory/tasks/main.yml
@@ -33,7 +33,7 @@
   # War
   # -----------------------
 
-- include: "{{ common.utils.tomcat }}"
+- include: "{{ common.roles.tomcat }}"
   vars:
     tomcat_port: "{{ artifactory_port }}"
   when: artifactory.run == 'war'
