--- a/playbooks/roles/skydns/tasks/etcd.yml
+++ b/playbooks/roles/skydns/tasks/etcd.yml
@@ -20,4 +20,4 @@
     command: "{{ etcd_bin }} $ETCD_OPTS"
     port:    "{{ etcd_port }}"
     verify:
-      - { path: '/version', content: "{{ etcd.version }}" }
+      - { path: /version, content: "{{ etcd.version }}" }
