--- a/playbooks/roles/zookeeper/tasks/exhibitor.yml
+++ b/playbooks/roles/zookeeper/tasks/exhibitor.yml
@@ -4,6 +4,7 @@
     exhibitor_version: "{{ exhibitor.version | calculate( exhibitor.latest ) }}"
 - set_fact:
     exhibitor_port:    "{{ exhibitor_port | default( exhibitor.port ) }}"
+    maven_repo:        "{{ maven_repo     | default( exhibitor.maven_repo )}}"
     exhibitor_jar:     "{{ exhibitor.home }}/build/libs/exhibitor-{{ exhibitor_version }}.jar"
 
 - stat: path={{ exhibitor_jar }}
