--- a/playbooks/roles/zookeeper/vars/main.yml
+++ b/playbooks/roles/zookeeper/vars/main.yml
@@ -11,7 +11,8 @@ zookeeper: {
 exhibitor: {
   version: latest, # 1.5.2, latest - https://github.com/Netflix/exhibitor/releases
   port:    8080,
-  gradle_provider: '{{ common.repo.github }}/evgeny-goldin/gradle-provider.git',
+  maven_repo:      '{{ common.repo.jcenter }}',
+  gradle_provider: '{{ common.repo.github  }}/evgeny-goldin/gradle-provider.git',
   home:            /opt/exhibitor,
   latest: {
     command: "curl -s '{{ common.repo.jcenter }}/com/netflix/exhibitor/exhibitor-standalone/' | grep '<pre>' | grep -v 'maven-metadata.xml' | sed -r 's/<[^>]+>//g' | tr -d '/' | tail -1",
