--- a/playbooks/roles/helios/tasks/common.yml
+++ b/playbooks/roles/helios/tasks/common.yml
@@ -7,7 +7,7 @@
 - debug: msg="zookeeper_port = '{{ zookeeper_port }}'"
 - debug: msg="etcd_port = '{{ etcd_port }}'"
 - debug: msg="exhibitor_port = '{{ exhibitor_port }}'"
-- debug: msg="domain = '{{ domain }}'"
+- debug: msg="skydns_domain = '{{ skydns_domain }}'"
 - debug: msg="ansible_fqdn = '{{ ansible_fqdn }}'"
 - debug: msg="facter_ipaddress_eth1 = '{{ facter_ipaddress_eth1 }}'"
 
