--- a/playbooks/roles/zookeeper/tasks/main.yml
+++ b/playbooks/roles/zookeeper/tasks/main.yml
@@ -1,5 +1,24 @@
 ---
-- include: zookeeper.yml
+- set_fact:
+    zookeeper_home: "{{ zookeeper.home }}/zookeeper-{{ zookeeper.version }}"
+    zookeeper_port: "{{ zookeeper_port | default( zookeeper.port ) }}"
 
-- include: exhibitor.yml
-  when:    install_exhibitor | default(False)
+- include: "{{ common.utils.service }}"
+  vars:
+    title:    ZooKeeper
+    service:  zookeeper
+    url:     "{{ zookeeper.url     | tokens( zookeeper ) }}"
+    archive: "{{ zookeeper.archive | tokens( zookeeper ) }}"
+    home:    "{{ zookeeper.home }}"
+    configs:
+      - { from: zookeeper-config, to: "{{ zookeeper_home }}/conf/zoo.cfg" }
+    command: "{{ zookeeper_home }}/bin/zkServer.sh start-foreground"
+    port:    "{{ zookeeper_port }}"
+
+- name: Running zkCli
+  shell:    "echo 'ls /' | {{ zookeeper_home }}/bin/zkCli.sh -server {{ common.net.localhost }}:{{ zookeeper_port }}"
+  register: zk_out
+
+- name: Verifying zkCli
+  fail: msg="Failed to execute zkCli - {{ zk_out }}"
+  when: "'{{ common.net.localhost }}:{{ zookeeper_port }}(CONNECTED)' not in zk_out.stdout"
