Artifactory and Nexus load roles added

--- a/playbooks/roles/exhibitor/tasks/main.yml
+++ b/playbooks/roles/exhibitor/tasks/main.yml
@@ -53,3 +53,4 @@
       - { path: /exhibitor, status: 404 }
       - { path: /exhibitor/v1/ui/, status: 405 }
       - { path: /exhibitor/v1/ui/index.html, content: Exhibitor for ZooKeeper }
+  when: exhibitor_service | default(True)
