--- a/playbooks/roles/golang/vars/main.yml
+++ b/playbooks/roles/golang/vars/main.yml
@@ -1,17 +1,17 @@
 ---
-go: {
-  version: latest, # 1.4, latest - https://golang.org/dl/
+golang: {
+  version: latest, # 1.4.1, latest - https://golang.org/dl/
   latest: {
     command: "curl -s 'https://golang.org/dl/' | grep '.src.tar.gz' | sed -r 's/<[^>]+>//g' | sed 's/\\.src\\.tar\\.gz//g' | sed -r 's/go//' | awk '{print $1}' | head -1",
     pattern: '^\d+\.\d+'
   },
   url:     'https://storage.googleapis.com/golang/go<version>.linux-amd64.tar.gz',
   archive: /opt/go-<version>.tar.gz,
-  path:    /opt/golang,
-  bin_dir: /usr/local/go/bin
+  home:    /opt/golang
 }
 
-go_env: {
-  PATH:   "{{ ansible_env.PATH }}:{{ go.bin_dir }}",
-  GOPATH: "{{ go.path }}"
+golang_env: {
+  GOPATH: "{{ golang.home }}",
+  GOROOT: "{{ golang.home }}/go",
+  PATH:   "$PATH:{{ golang.home }}/go/bin",
 }
