--- a/playbooks/roles/nexus/vars/main.yml
+++ b/playbooks/roles/nexus/vars/main.yml
@@ -10,7 +10,7 @@ nexus: {
     home:    /opt/nexus
   },
   war: {
-    url:     '{{ common.repo.jcenter }}/org/sonatype/nexus/nexus-webapp/<version>/nexus-webapp-<version>.war',
+    url:     '{{ common.urls.jcenter }}/org/sonatype/nexus/nexus-webapp/<version>/nexus-webapp-<version>.war',
     archive: /opt/nexus-<version>.war,
     home:    nexus
   },
