--- a/playbooks/roles/nexus/tasks/main.yml
+++ b/playbooks/roles/nexus/tasks/main.yml
@@ -17,10 +17,10 @@
     url:     "{{ nexus.standalone.url     | tokens( nexus ) }}"
     archive: "{{ nexus.standalone.archive | tokens( nexus ) }}"
     home:    "{{ nexus.standalone.home }}"
+    env:
+      RUN_AS_USER: root
     configs:
-      - { from: nexus.sh,         to: "{{ ubuntu.envs_dir }}/nexus.sh" }
       - { from: nexus.properties, to: "{{ nexus_home }}/conf/nexus.properties" }
-    env_config: "{{ ubuntu.envs_dir }}/nexus.sh"
     command: "{{ nexus_home }}/bin/nexus console"
     port:    "{{ nexus_port }}"
     timeout: "{{ nexus.timeout }}"
