--- a/playbooks/utils/service.yml
+++ b/playbooks/utils/service.yml
@@ -19,6 +19,10 @@
 - set_fact:
     upstart_script: "{{ ubuntu.init_dir }}/{{ service }}.conf"
 
+- set_fact:
+    env_config: "{{ env_file }}"
+  when: ( env is defined ) and ( env_config is not defined )
+
 - debug: msg="Starting {{ title }} service '{{ service }}' with '{{ command }}' in '{{ upstart_script }}'"
 
 - name: Generating {{ title }} upstart script
