--- a/playbooks/roles/etcd/tasks/main.yml
+++ b/playbooks/roles/etcd/tasks/main.yml
@@ -12,9 +12,10 @@
     url:     "{{ etcd.url     | tokens({ 'dir_name': etcd_dir, 'version': etcd.version }) }}"
     archive: "{{ etcd.archive | tokens( etcd ) }}"
     home:    "{{ etcd.home }}"
-    configs:
-      - { from: config, to: "{{ etcd.config }}" }
-    env_config:  "{{ etcd.config }}"
+    env:
+      # https://github.com/coreos/etcd/blob/master/Documentation/configuration.md
+      ETCD_ADDR:      "{{ common.net.localhost }}:{{ etcd_port }}"
+      ETCD_BIND_ADDR: "{{ common.net.any_ip }}:{{ etcd_port }}"
     tests:
       - { run: "{{ etcd_bin }} --version", expect: "{{ etcd.version }}" }
     command: "{{ etcd_bin }} $ETCD_OPTS"
