--- a/playbooks/utils/download.yml
+++ b/playbooks/utils/download.yml
@@ -33,13 +33,21 @@
       PATH: "$PATH:{{ path }}"
   when: path is defined
 
-- set_fact: env_file="{{ ubuntu.envs_dir }}/{{ title.lower() }}.sh"
+# {{ env_file }} is a file containing service env variables, loaded by upstart script
+- set_fact:
+    env_file: "{{ ubuntu.envs_dir }}/{{ title.lower() }}.sh"
   when: env is defined
+
+# {{ run_env }} in an environment (dictionary) used when running {{ tests }} and {{ cleanup }} commands
+- set_fact:
+    run_env: "{{ env | default({}) | expand_path }}"
 
 - debug: var=download
 - debug: var=unpack
 - debug: var=clean_home
 - debug: var=env
+- debug: var=env_file
+- debug: var=run_env
 
 - debug: msg="Downloading {{ title }} - '{{ url }}' => '{{ archive_absolute }}'"
   when:  download and ( not unpack )
@@ -69,15 +77,6 @@
     copy: false
   when: unpack
 
-- name:        Running {{ title }} tests
-  command:     "{{ item.run }}"
-  environment: "{{ env | default({}) | expand_path }}"
-  register:    test_out
-  failed_when: item.expect not in test_out.stdout
-  with_items:
-    - "{{ tests }}"
-  when: tests is defined
-
 - shell: mkdir -p "$( dirname {{ item.to }} )"
   with_items:
     - "{{ configs }}"
@@ -102,9 +101,18 @@
   with_dict: env | default({})
   when:      env is defined
 
+- name:        Running {{ title }} tests
+  command:     "{{ item.run }}"
+  environment: "{{ run_env }}"
+  register:    test_out
+  failed_when: item.expect not in test_out.stdout
+  with_items:
+    - "{{ tests }}"
+  when: tests is defined
+
 - name:        Running {{ title }} cleanup commands
   command:     "{{ ubuntu.bash }} -c '{{ item }}'"
-  environment: "{{ env | default({}) | expand_path }}"
+  environment: "{{ run_env }}"
   with_items:
     - "{{ cleanup }}"
   when: cleanup is defined
