Scala and Gatling roles added

--- a/playbooks/roles/artifactory-load/meta/main.yml
+++ b/playbooks/roles/artifactory-load/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 dependencies:
   - { role: artifactory, when: periodic }
+  - { role: gatling,     when: periodic }
   - { role: exhibitor,   when: periodic,
                          maven_repo:        "{{ artifactory_load.maven_repo }}",
                          exhibitor_service: false }
