Vagrant boxes - adjustable memory/cpu, Service Util - waits 3 seconds after restarting the service

--- a/playbooks/utils/service.yml
+++ b/playbooks/utils/service.yml
@@ -28,6 +28,7 @@
 
 - name:    Restarting {{ title }} service
   service: name={{ service }} state=restarted enabled=yes
+- pause:   seconds=3
 
 - include: verify.yml
   when:    port is defined
