--- a/playbooks/roles/skydns/meta/main.yml
+++ b/playbooks/roles/skydns/meta/main.yml
@@ -1,4 +1,4 @@
 ---
 dependencies:
-  - { role: golang, when: periodic }
-  - { role: etcd,   when: periodic }
+  - { role: etcd, when: periodic }
+  - { role: golang }
