--- a/playbooks/artifactory-ubuntu.yml
+++ b/playbooks/artifactory-ubuntu.yml
@@ -11,6 +11,7 @@
     - vars/{{ ansible_distribution }}.yml
 
   roles:
-    - { role: run-before, period: daily }
-    - artifactory-load
+    - { role: run-before,  period: daily  }
+    - { role: artifactory, when: periodic }
+    - { role: repo-load,   repo: "http://{{ common.net.localhost }}:{{ artifactory_port | default( artifactory.port ) }}/artifactory/repo/" }
     - run-after
