--- a/playbooks/nexus-ubuntu.yml
+++ b/playbooks/nexus-ubuntu.yml
@@ -11,6 +11,7 @@
     - vars/{{ ansible_distribution }}.yml
 
   roles:
-    - { role: run-before, period: daily }
-    - nexus-load
+    - { role: run-before,  period: daily  }
+    - { role: nexus,       when: periodic }
+    - { role: repo-load,   repo: "http://{{ common.net.localhost }}:{{ nexus_port | default( nexus.port ) }}/nexus/content/repositories/central/" }
     - run-after
