--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -31,8 +31,15 @@ common: {
     verify:   "{{ playbook_dir }}/utils/verify.yml"
   },
 
+  vars: {
+    tomcat:    "{{ playbook_dir }}/roles/tomcat/vars/main.yml",
+    exhibitor: "{{ playbook_dir }}/roles/exhibitor/vars/main.yml"
+  },
+
   roles: {
-    tomcat:   "{{ playbook_dir }}/roles/tomcat/tasks/main.yml",
-    register: "{{ playbook_dir }}/roles/skydns/register-host.yml"
+    tomcat:    "{{ playbook_dir }}/roles/tomcat/tasks/main.yml",
+    exhibitor: "{{ playbook_dir }}/roles/exhibitor/tasks/main.yml",
+    gradle:    "{{ playbook_dir }}/roles/gradle/tasks/main.yml",
+    register:  "{{ playbook_dir }}/roles/skydns/register-host.yml"
   }
 }
