--- a/playbooks/roles/repo-load/vars/main.yml
+++ b/playbooks/roles/repo-load/vars/main.yml
@@ -1,4 +1,7 @@
 ---
 repo_load: {
-  
+  sample_app: {
+    repo: '{{ common.urls.github }}/gradleware/continuous-delivery-jump-start.git',
+    home: /opt/continuous-delivery-jump-start
+  }
 }
