--- a/playbooks/nexus-ubuntu.yml
+++ b/playbooks/nexus-ubuntu.yml
@@ -11,7 +11,6 @@
     - vars/{{ ansible_distribution }}.yml
 
   roles:
-    - { role: run-before,  period: daily  }
-    - { role: nexus,       when: periodic }
-    - { role: repo-load,   repo: "http://{{ common.net.localhost }}:{{ nexus_port }}/nexus/content/repositories/central/" }
+    - { role: run-before, period: daily }
+    - nexus
     - run-after
